// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preciseFormatterPrettier resolveConfig() brand-new-json-file 1`] = `
Object {
  "filepath": "./test/fixtures/brand-new-json-file/initial.json",
  "semi": true,
  "singleQuote": true,
  "trailingComma": "all",
}
`;

exports[`preciseFormatterPrettier resolveConfig() brand-new-jsx-file 1`] = `
Object {
  "filepath": "./test/fixtures/brand-new-jsx-file/initial.jsx",
  "semi": true,
  "singleQuote": true,
  "trailingComma": "all",
}
`;

exports[`preciseFormatterPrettier resolveConfig() empty-javascript-file 1`] = `
Object {
  "filepath": "./test/fixtures/empty-javascript-file/initial.js",
  "semi": true,
  "singleQuote": true,
  "trailingComma": "all",
}
`;

exports[`preciseFormatterPrettier resolveConfig() formatting-would-affect-total-line-count 1`] = `
Object {
  "filepath": "./test/fixtures/formatting-would-affect-total-line-count/initial.js",
  "semi": true,
  "singleQuote": true,
  "trailingComma": "all",
}
`;

exports[`preciseFormatterPrettier resolveConfig() multiple-updated-lines-javascript-file 1`] = `
Object {
  "filepath": "./test/fixtures/multiple-updated-lines-javascript-file/initial.js",
  "semi": true,
  "singleQuote": false,
  "trailingComma": "none",
}
`;

exports[`preciseFormatterPrettier resolveConfig() single-updated-line-typescript 1`] = `
Object {
  "filepath": "./test/fixtures/single-updated-line-typescript/initial.ts",
  "parser": "typescript",
  "semi": true,
  "singleQuote": true,
  "trailingComma": "all",
}
`;
